[PE] Invalidate text control selection when pseudo style changes

In the simplest case, ::selection styles only apply to the selected
children of an element. For example, "second" will not have a
selection background color style in the following example:
<style> .foo::selection { background: red; } </style>
<span class="foo">first <span>second</span> third</span>

Text controls such as <input> and <textarea> are implemented with a
user agent shadow tree so the LayoutText contents are not children
of the text control parent. For example:
<input type="text" value="AAAAAAAAAAAA">
Generates this layout tree:
LayoutTextControl INPUT
  LayoutBlockFlow DIV (editable) <-- part of the user agent shadow tree
    LayoutText #text "AAAAAAAAAAAA"

When painting selection, there is a special-case for text control
contents (see: GetUncachedSelectionStyle in SelectionPaintingUtils.cpp)
which uses the text control's pseudo selection style.

This patch adds a special-case for selection invalidation so changes to
text control pseudo styles invalidate selected text contents too.

Bug: 702610
Change-Id: I06b549b5b5eff77d71c4ea58ce12eaf00519f538
Reviewed-on: https://chromium-review.googlesource.com/929664
Reviewed-by: Philip Rogers (OOO) <pdr@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Philip Rogers (OOO) <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539575}
Former-commit-id: 313c77246b3f08392edb2a6d0ac8ba15987725bf